# ssl-iasa

./: .gitignore  pyproject.toml
notebooks/: lab2.ipynb
src/config/: datasets_config.py  train_config.py
src/datasets/: augmented.py  base.py  loader.py  unlabeled.py
src/models/: vgg16.py
src/trainers/self_learning/: base.py  noisy_student.py
src/trainers/supervised/: base.py
src/utils/: annotator.py  metrics.py  plots.py  seed.py  train.py
