[tool.poetry]
name = "ssl-iasa"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torchvision = "0.19.1"
plotly = "5.17.0"
tqdm = "4.66.5"
matplotlib = "3.9.2"
torchmetrics = "1.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
